--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/JuanDelPueblo/discord-application-bot#readme",
   "dependencies": {
-    "discord.js": "^14.11.0"
+    "discord.js": "^14.11.0",
+    "sequelize": "^6.32.0",
+    "sqlite3": "^5.1.6"
   }
 }
