--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,9 @@
 		"strict": true,
 		"noImplicitAny": false,
 		"strictNullChecks": true,
-		"checkJs": true,
-		"allowJs": true,
-		"moduleResolution": "node",
+		"moduleResolution": "NodeNext",
 		"types": [
-			"node"
+			"node",
 		],
 		"lib": [
 			"es6"
@@ -21,7 +19,6 @@
 		"forceConsistentCasingInFileNames": true,
 		"allowUnreachableCode": true,
 		"useUnknownInCatchVariables": false, // TypeScript 4.4+ only!
-		"resolveJsonModule": true
 	},
 	"include": [
 		"src/**/*.ts",
