Finish TypeScript conversion

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "ts-node --esm --trace-warnings src/index.ts",
     "start": "ts-node --esm src/index.ts"
   },
   "repository": {
@@ -31,12 +32,15 @@
     "@json2csv/plainjs": "^7.0.1",
     "discord-api-types": "^0.37.49",
     "discord.js": "^14.11.0",
-    "sequelize": "^6.32.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.32.1",
     "sequelize-typescript": "^2.1.5",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.0",
+    "@types/node": "^20.4.2",
+    "@types/validator": "^13.7.17",
     "eslint": "^8.43.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
