--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
 		"forceConsistentCasingInFileNames": true,
 		"allowUnreachableCode": true,
 		"useUnknownInCatchVariables": false, // TypeScript 4.4+ only!
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"strictPropertyInitialization": false,
 	},
 	"include": [
 		"src/**/*.ts",
